--- a/index.html
+++ b/index.html
@@ -590,37 +590,37 @@
                 <ul class="days">
                     <li></li>
                     <li></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">1</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">2</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">3</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">4</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">5</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">6</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">7</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">8</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">9</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">10</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">11</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">12</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">13</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">14</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">15</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">16</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">17</a></li>
-                    <li><span class="active"><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">18</span></a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">19</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">20</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">21</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">22</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">23</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">24</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">25</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">26</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">27</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">28</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">29</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">30</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">31</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">1</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">2</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">3</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">4</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">5</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">6</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">7</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">8</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">9</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">10</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">11</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">12</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">13</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">14</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">15</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">16</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">17</a></li>
+                    <li><span class="active"><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">18</span></a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">19</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">20</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">21</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">22</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">23</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">24</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">25</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">26</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">27</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">28</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">29</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">30</a></li>
+                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health_private/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">31</a></li>
                     <li></li>
                     <li></li>
                 </ul>
