--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       }
 
       #myDIV {
-        background-color: #f44336;
+        background-color: #59B3C2 !important;
         padding: 30px 40px;
         color: white;
         text-align: center;
@@ -178,7 +178,7 @@
         width: 75%;
         padding: 10px;
         float: left;
-        font-size: 16px;
+        font-size: 25px;
       }
 
       .addBtn {
@@ -653,7 +653,7 @@
         <h2 class="green1" align="center">My Schedule</h2>
         <div class = "nadir">
           <div id="myDIV">
-            <h2 style="margin:5px">My To Do List</h2>
+            <h1 style="margin:5px">My To Do List</h1>
             <div class="sizingg">
               <input type="text" id="myInput" placeholder="Title...">
               <span onclick="newElement()" class="addBtn">Add</span>
