--- a/index.html
+++ b/index.html
@@ -643,29 +643,23 @@
 </div>
 
 
-
-
-
-
-
 <div data-role="page" id="schedule1">
     <div role="main" class="ui-content">
-        <h2 class="green1" align="center">My Schedule</h2>
         <div class = "nadir">
           <div id="myDIV">
-            <h1 style="margin:5px">My To Do List</h1>
+            <h1 style="margin:5px">My Schedule</h1>
             <div class="sizingg">
               <input type="text" id="myInput" placeholder="Title...">
               <span onclick="newElement()" class="addBtn">Add</span>
             </div>
           </div>
           <ul id="myUL" class = "hi">
-            <li class = "hi">Hit the gym</li>
-            <li class="hi">Pay bills</li>
-            <li class = "hi">Meet George</li>
-            <li class = "hi">Buy eggs</li>
-            <li class = "hi">Read a book</li>
-            <li class = "hi">Organize office</li>
+            <li class = "hi">10:00 Ibuprofen Pills</li>
+            <li class = "hi">13:00 Beta Blockers</li>
+            <li class = "hi">15:00 Ibuprofen Pills</li>
+            <li class="hi">16:00 Ibuprofen Pills</li>
+            <li class = "hi">21:00 Ibuprofen Pills</li>
+            <li class = "hi">22:00 Ibuprofen Pills</li>
           </ul>
         </div>
     </div>
