--- a/index.html
+++ b/index.html
@@ -656,9 +656,9 @@
           <ul id="myUL" class = "hi">
             <li class = "hi">10:00 Ibuprofen Pills</li>
             <li class = "hi">13:00 Beta Blockers</li>
-            <li class = "hi">15:00 Ibuprofen Pills</li>
+            <li class = "hi">15:00 Blood Thinners</li>
             <li class="hi">16:00 Ibuprofen Pills</li>
-            <li class = "hi">21:00 Ibuprofen Pills</li>
+            <li class = "hi">21:00 Statin Pills</li>
             <li class = "hi">22:00 Ibuprofen Pills</li>
           </ul>
         </div>
@@ -683,12 +683,20 @@
             <hr/>
             <p> <strong>TEAM ASCLEPIUS</strong> </p> 
             <br/>
-            <p>Our team comprises 4 Form 3 students from the Diocesan Girls' School, Hong Kong. We are Choi Ching Lam, Miko Leung, Anna Chiu, and Olga Kwan. </p>
+            <p>Our team comprises 1 Form 5 student, 2 Form 4 students, and 1 Form 3 student from the Diocesan Girls' School, Hong Kong. We are Annie Lee, Choi Ching Lam, Miko Leung, and Minnie Chan. </p>
+            <br/>
+            <p> <strong>Annie Lee</strong> </p> 
+            <br/>
+            <ul>
+            <li>Project Health's video editor and designer.</li>
+            <li>Is passionate about finance, aspires to work at an iBank</li>
+            <li>An mathematical talent unconditionally accepted to Cambridge 1 year in advance to major in Economics.</li>
+            </ul>
             <br/>
             <p> <strong>Choi Ching Lam</strong> </p> 
             <br/>
             <ul>
-            <li>Project Health' idea creator and developer for the convolutional neural network and Project Health application.</li>
+            <li>Project Health's idea creator and developer for the Project Health application.</li>
             <li>Is passionate about artificial intelligence, aspires to be a college Computer Science major at MIT, and go into academia.</li>
             <li>Github: https://github.com/chinglamchoi</li>
             </ul>
@@ -696,25 +704,17 @@
             <p> <strong>Miko Leung</strong> </p> 
             <br/>
             <ul>
-            <li>Project Health' video editor and designer.</li>
+            <li>Project Health's video editor and designer.</li>
             <li>Math enthusiast who is forever preoccupied with maths. Aspires to be a doctor who saves lives.</li>
             <li>Github: https://github.com/gflareon</li>
             </ul>
             <br/>
-            <p> <strong>Anna Chiu</strong> </p> 
+            <p> <strong>Minnie Chan</strong> </p> 
             <br/>
             <ul>
-            <li>Project Health' business plan writer.</li>
-            <li>Enjoys biology and chemistry. </li>
-            <li>Aspires to become a medical doctor.</li>
-            </ul>
-            <br/>
-            <p> <strong>Olga Kwan</strong> </p> 
-            <br/>
-            <ul>
-            <li>Project Health' editor.</li>
-            <li>Passionate about literature and public speaking.</li>
-            <li>Humanitarian who ejoys speaking up for those who aren't heard.</li>
+            <li>Project Health's developer.</li>
+            <li>Passionate about Computer Science and programming.</li>
+            <li>Aspires to attend MIT as a CS major.</li>
             </ul>
         </div>
         <div data-role="footer">
