--- a/index.html
+++ b/index.html
@@ -607,7 +607,98 @@
       var i;
       for (i = 0; i < myNodelist.length; i++) {
         var span = document.createElement("SPAN");
+        var txt = document.createTextNode("\u00D7"); // \u2713
+        span.className = "close";
+        span.appendChild(txt);
+        myNodelist[i].appendChild(span);
+      }
+
+      // Click on a close button to hide the current list item
+      var close = document.getElementsByClassName("close");
+      var i;
+      for (i = 0; i < close.length; i++) {
+        close[i].onclick = function() {
+          var div = this.parentElement;
+          div.style.display = "none";
+        }
+      }
+
+      // Add a "checked" symbol when clicking on a list item
+      var list = document.querySelector('ul');
+      list.addEventListener('click', function(ev) {
+        if (ev.target.tagName === 'LI') {
+          ev.target.classList.toggle('checked');
+        }
+      }, false);
+
+      // Create a new list item when clicking on the "Add" button
+      function newElement() {
+        var li = document.createElement("li");
+        var inputValue = document.getElementById("myInput").value;
+        var t = document.createTextNode(inputValue);
+        li.appendChild(t);
+        if (inputValue === '') {
+          alert("You must write something!");
+        } else {
+          document.getElementById("myUL").appendChild(li);
+        }
+        document.getElementById("myInput").value = "";
+
+        var span = document.createElement("SPAN");
         var txt = document.createTextNode("\u00D7");
+        span.className = "close";
+        span.appendChild(txt);
+        li.appendChild(span);
+
+        for (i = 0; i < close.length; i++) {
+          close[i].onclick = function() {
+            var div = this.parentElement;
+            div.style.display = "none";
+          }
+        }
+      }
+</script>
+</div>
+
+
+
+
+<div data-role="page" id="address">
+  <div data-role="header">
+    <div class="icon-bar">
+      <a href="#home"><i class="fa fa-home"></i></a>
+      <a href="#address"><i class="fa fa-address-book"></i></a>
+      <a href="#tips"><i class="fa fa-lightbulb-o"></i></a>
+      <a href="#info"><i class="fa fa-question-circle"></i></a>
+    </div>
+  </div>
+  <div role="main" class="ui-content">
+        <div class = "nadir">
+          <div id="myDIV">
+            <h1 style="margin:5px">My Contacts</h1>
+            <div class="sizingg">
+              <input type="text" id="myInput" placeholder="Enter Name..">
+              <span onclick="newElement()" class="addBtn">Add</span>
+            </div>
+          </div>
+          <ul id="myUL" class = "hi">
+            <li class = "hi">1. Daughter: Madeline Law      <a href="tel:60733637" class="button1 ui-link" id="shut"><i class="fa fa-phone"></i>6073 3637</a></li>
+            <li class = "hi">2. Son: James Law      <a href="tel:60733637" class="button1 ui-link" id="shut"><i class="fa fa-phone"></i>6073 3637</a></li>
+            <li class = "hi">3. Care Giver: Mrs Anne      <a href="tel:60733637" class="button1 ui-link" id="shut"><i class="fa fa-phone"></i>6073 3637</a></li>
+            <li class = "hi">4. Friend: Evelyn Wang      <a href="tel:60733637" class="button1 ui-link" id="shut"><i class="fa fa-phone"></i>6073 3637</a></li>
+            <li class = "hi">5. Friend: Chen Gang      <a href="tel:60733637" class="button1 ui-link" id="shut"><i class="fa fa-phone"></i>6073 3637</a></li>
+            <li class = "hi">6. Friend: Neville Logan      <a href="tel:60733637" class="button1 ui-link" id="shut"><i class="fa fa-phone"></i>6073 3637</a></li>
+            <li class="hi">7. Colleague: Nick Fang      <a href="tel:60733637" class="button1 ui-link" id="shut"><i class="fa fa-phone"></i>6073 3637</a></li>
+            <li class="hi">8. Colleague: David Wallace      <a href="tel:60733637" class="button1 ui-link" id="shut"><i class="fa fa-phone"></i>6073 3637</a></li>
+          </ul>
+        </div>
+        <script>
+      // Create a "close" button and append it to each list item
+      var myNodelist = document.getElementsByTagName("LI");
+      var i;
+      for (i = 0; i < myNodelist.length; i++) {
+        var span = document.createElement("SPAN");
+        var txt = document.createTextNode("\u00D7"); // \u2713
         span.className = "close";
         span.appendChild(txt);
         myNodelist[i].appendChild(span);
@@ -668,7 +759,7 @@
         <div data-role="header">
             <div class="icon-bar">
                 <a href="#home"><i class="fa fa-home"></i></a>
-                <a href="#address?"><i class="fa fa-address-book"></i></a>
+                <a href="#address"><i class="fa fa-address-book"></i></a>
                 <a href="#tips"><i class="fa fa-lightbulb-o"></i></a>
                 <a href="#info"><i class="fa fa-question-circle"></i></a>
             </div>
@@ -729,93 +820,7 @@
 
 
 
-
-
-
-
-   <div data-role="page" id="cure">
-        <div data-role="header">
-            <div class="icon-bar">
-                <a href="#home"><i class="fa fa-home"></i></a>
-                <a href="#address"><i class="fa fa-address-book"></i></a>
-                <a href="#tips"><i class="fa fa-lightbulb-o"></i></a>
-                <a href="#info"><i class="fa fa-question-circle"></i></a>
-                </div>
-        </div>
-
-        <div role="main" class="ui-content">
-            <h2 align="center">Has your melanoma mole been medically diagnosed?</h2>    
-            <h5><a href="#dataset" data-role="button" data-transition="flip" class="button1">Yes</a></h5>
-            <h5><a href="#home" data-role="button" data-transition="flip" class="button1">No</a></h5>
-        </div>
-
-        <div data-role="footer">
-            <a href="#TOS" data-role="button" data-transition="flip" class="button2">Terms of Service</a>
-            <a href="#PP" data-role="button" data-transition="flip" class="button2">Privacy Policy</a>
-            <a href="#contact" data-role="button" data-transition="flip" class="button2">Contact Us</a>
-            <a href="#credits" data-role="button" data-transition="flip" class="button2">Credits</a>
-            <form class="form2" action="https://formspree.io/projecthealthdgs@gmail.com" method="POST">
-                <input name="name2" class="newsletter" placeholder="Full Name" type="text" required/>
-                <br/>
-                <input name="name2" class="newsletter" placeholder="Email" type="email" required/>
-                <button id="subscribe" type="submit">Subscribe for Healthy Living Tips</button>
-            </form>
-            <p id="c"> © 2019 Team Asclepius. All rights reserved. </p>
-        </div>
-    </div>
-
-
-            <div data-role="page" id="dataset">
-            <div data-role="header">
-                <div class="icon-bar">
-                <a href="#home"><i class="fa fa-home"></i></a>
-                <a href="#address"><i class="fa fa-address-book"></i></a>
-                <a href="#tips"><i class="fa fa-lightbulb-o"></i></a>
-                <a href="#info"><i class="fa fa-question-circle"></i></a>
-                </div>
-            </div>
-            <div role="main" class="ui-content">
-                <div id="mainform">
-                    <h2 class="green">Please fill out the following form to submit your medically diagnosed melanoma mole!</h2>
-                    <form id="form" action="https://formspree.io/projecthealthdgs@gmail.com" method="POST">
-                        <h3>Form</h3>       
-                        <hr/><br/>
-                        <label>Name: <span>*</span></label>
-                        <br/>
-                        <input id="name" name="name" placeholder="Your Name" type="text" required/><br/>
-                        <br/>
-                        <label>Email: <span>*</span></label>
-                        <br/>
-                        <input id="email" name="email" placeholder=" Your Email" type="email" required/><br/>
-                        <label>Link to image: <span>*</span></label>
-                        <br/>
-                        <input id="Image" type="text" placeholder="Link to image for testing" name="ImageLink" required/>
-                        <br/>
-                        <br/>
-                        <button type="submit" class="subscribe2">Submit</button>
-                        <br/>
-                    </form>
-                    <h4> Thank you for contributing to the Project Health dataset of melanoma images! </h4>
-                </div>
-            </div>
-            <div data-role="footer">
-                <a href="#TOS" data-role="button" data-transition="flip" class="button2">Terms of Service</a>
-                <a href="#PP" data-role="button" data-transition="flip" class="button2">Privacy Policy</a>
-                <a href="#contact" data-role="button" data-transition="flip" class="button2">Contact Us</a>                 
-                <a href="#credits" data-role="button" data-transition="flip" class="button2">Credits</a>
-                <form class="form2" action="https://formspree.io/projecthealthdgs@gmail.com" method="POST">
-                    <input name="name2" class="newsletter" placeholder="Full Name" type="text" required/>
-                    <br/>
-                    <input name="name2" class="newsletter" placeholder="Email" type="email" required/>
-                    <button id="subscribe" type="submit">Subscribe for Healthy Living Tips</button>
-                </form>
-                <p id="c"> © 2019 Team Asclepius. All rights reserved. </p>
-            </div>
-        </div>
-
-
-
-    <div data-role="page" id="info">
+<div data-role="page" id="info">
         <div data-role="header">
             <div class="icon-bar">
                 <a href="#home"><i class="fa fa-home"></i></a>
