--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
             color: white!important;
             font-family: 'Quicksand', sans-serif !important;
           height: 35px !important;
+          width: 40% !important;
           text-align: center !important;
           font-size: 22px !important;
         }
@@ -754,7 +755,7 @@
           </div>
           <ul id="myUL" class = "bye"> 
             <li class = "bye">1. Daughter: Madeline Law<a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li>
-            <li class = "bye">2. Son: James Law<a href="tel:60733637" class="button11729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><!-- JEFFREY -->
+            <li class = "bye">2. Son: James Law<a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><!-- JEFFREY -->
             <li class = "bye">3. Care Giver: Mrs Anne<a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><!-- JEFFREY -->
             <li class = "bye">4. Friend: Evelyn Wang<a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><!-- JEFFREY -->
             <li class = "bye">5. Friend: Chen Gang<a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><!-- JEFFREY -->
