--- a/index.html
+++ b/index.html
@@ -230,18 +230,16 @@
           font-size: 22px !important;
         }
         .button1729 {
-            margin: 2em auto !important;
             display: block !important;
             border: 6px solid rgba(255, 255, 255, 0.45) !important;
-            border-radius: 50px !important;
             padding: 0.5em 2em !important;
             background-repeat: no-repeat !important;
-            background-size: 40% !important;
+            background-size: 30% !important;
             background-clip: padding-box !important;
             position: relative !important;
             color: white!important;
             font-family: 'Quicksand', sans-serif !important;
-          height: 35px !important;
+          height: 20px !important;
           width: 40% !important;
           text-align: center !important;
           font-size: 22px !important;
@@ -753,15 +751,16 @@
               <span onclick="newElement()" class="addBtn">Add</span>
             </div>
           </div>
+          <br>
           <ul id="myUL" class = "bye"> 
-            <li class = "bye">1. Daughter: Madeline Law<a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li>
-            <li class = "bye">2. Son: James Law<a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><!-- JEFFREY -->
-            <li class = "bye">3. Care Giver: Mrs Anne<a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><!-- JEFFREY -->
-            <li class = "bye">4. Friend: Evelyn Wang<a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><!-- JEFFREY -->
-            <li class = "bye">5. Friend: Chen Gang<a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><!-- JEFFREY -->
-            <li class = "bye">6. Friend: Neville Logan<a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><!-- JEFFREY -->
-            <li class="bye">7. Colleague: Nick Fang<a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><!-- JEFFREY -->
-            <li class="bye">8. Colleague: David Wallace<a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><!-- JEFFREY -->
+            <li class = "bye">1. Daughter: Madeline Law<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li>
+            <li class = "bye">2. Son: James Law<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><!-- JEFFREY -->
+            <li class = "bye">3. Care Giver: Mrs Anne<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><!-- JEFFREY -->
+            <li class = "bye">4. Friend: Evelyn Wang<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><!-- JEFFREY -->
+            <li class = "bye">5. Friend: Chen Gang<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><!-- JEFFREY -->
+            <li class = "bye">6. Friend: Neville Logan<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><!-- JEFFREY -->
+            <li class="bye">7. Colleague: Nick Fang<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><!-- JEFFREY -->
+            <li class="bye">8. Colleague: David Wallace<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><!-- JEFFREY -->
           </ul>
         </div>
         <script>
@@ -820,7 +819,21 @@
           }
         }
       }
-</script>
+    </script>
+  </div>
+  <div data-role="footer">
+    <a href="#TOS" data-role="button" data-transition="flip" class="button2">Terms of Service</a>
+    <a href="#PP" data-role="button" data-transition="flip" class="button2">Privacy Policy</a>
+    <a href="#contact" data-role="button" data-transition="flip" class="button2">Contact Us</a> 
+    <a href="#credits" data-role="button" data-transition="flip" class="button2">Credits</a>
+    <form class="form2" action="https://formspree.io/projecthealthdgs@gmail.com" method="POST">
+      <input name="name2" class="newsletter" placeholder="Full Name" type="text" required/>
+      <br/>
+      <input name="name2" class="newsletter" placeholder="Email" type="email" required/>
+      <button id="subscribe" type="submit">Subscribe for Healthy Living Tips </button>
+    </form>
+    <p id="c"> © 2019 Team Asclepius. All rights reserved. </p>
+  </div>
 </div>
 
 
