--- a/index.html
+++ b/index.html
@@ -753,15 +753,16 @@
           </div>
           <br>
           <ul id="myUL" class = "bye"> 
-            <li class = "bye">1. Daughter: Madeline Law<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li>
-            <li class = "bye">2. Son: James Law<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><!-- JEFFREY -->
-            <li class = "bye">3. Care Giver: Mrs Anne<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><!-- JEFFREY -->
-            <li class = "bye">4. Friend: Evelyn Wang<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><!-- JEFFREY -->
-            <li class = "bye">5. Friend: Chen Gang<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><!-- JEFFREY -->
-            <li class = "bye">6. Friend: Neville Logan<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><!-- JEFFREY -->
-            <li class="bye">7. Colleague: Nick Fang<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><!-- JEFFREY -->
-            <li class="bye">8. Colleague: David Wallace<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><!-- JEFFREY -->
+            <li class = "bye">1. Daughter: Madeline Law<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><br>
+            <li class = "bye">2. Son: James Law<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><br><!-- JEFFREY -->
+            <li class = "bye">3. Care Giver: Mrs Anne<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><br><!-- JEFFREY -->
+            <li class = "bye">4. Friend: Evelyn Wang<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><br><!-- JEFFREY -->
+            <li class = "bye">5. Friend: Chen Gang<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><br><!-- JEFFREY -->
+            <li class = "bye">6. Friend: Neville Logan<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><br><!-- JEFFREY -->
+            <li class="bye">7. Colleague: Nick Fang<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><br><!-- JEFFREY -->
+            <li class="bye">8. Colleague: David Wallace<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><br><!-- JEFFREY -->
           </ul>
+          <br>
         </div>
         <script>
       // Create a "close" button and append it to each list item
