--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             position: relative !important;
             color: white!important;
             font-family: 'Quicksand', sans-serif !important;
-          height: 45px !important;
+          height: 39px !important;
           width: 40% !important;
           text-align: center !important;
           font-size: 22px !important;
@@ -760,7 +760,7 @@
             <li class = "bye">5. Friend: Chen Gang<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><br><!-- JEFFREY -->
             <li class = "bye">6. Friend: Neville Logan<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><br><!-- JEFFREY -->
             <li class="bye">7. Colleague: Nick Fang<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><br><!-- JEFFREY -->
-            <li class="bye">8. Colleague: David Wallace<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><br><!-- JEFFREY -->
+            <li class="bye">8. Colleague: Dave Wallace<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><br><!-- JEFFREY -->
           </ul>
           <br>
         </div>
